# azure-functions-python-worker

./: .artifactignore  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-black  .travis.yml  CODEOWNERS  DEVELOPMENT.md  ISSUE_TEMPLATE.md  MANIFEST.in  OVERWATCH.md  README.md  RELEASING.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  appveyor.yml  az-config.yml  azure-pipelines-e2e.yml  azure-pipelines-nightly.yml  azure-pipelines.yml  codecov.yml  dev-setup.py  e2e-nightly-cli-azure-pipelines.yml  grpc_gen.sh  mylog.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  worker.py
.ci/: appveyor_download_webhost.ps1  appveyor_find_python.sh  appveyor_run_tests.ps1  appveyor_setup_worker.py  appveyor_tests.bat  devops_setup_worker.py  linux_build.sh  linux_devops_build.sh  linux_devops_code_coverage_generate.sh  linux_devops_dotnet.sh  linux_devops_e2e_tests.sh  linux_devops_tests.sh  linux_devops_tools.sh  linux_devops_unit_tests.sh  linux_install.sh  linux_tests.sh  travis_before_install.sh  travis_download_webhost.sh  travis_install.sh  travis_tests.sh  win_devops_build.bat  win_devops_tests.bat  win_devops_tools.bat  win_tests.bat
.ci/e2e/: setup-e2e.ps1
.ci/e2e_integration_test/: pipeline.yml  start-e2e.ps1
.ci/perf_tests/: run-perftests.sh
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  fabricbot.json
.github/DISCUSSION_TEMPLATE/: survey.md  survey.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  deferred_bindings_bug_report.yml  deferred_bindings_feature_request.yml  feature_request  feature_request.yml  general_question.md  new_tasks.md  sdk_bug_report.md  sdk_feature_request.md
.github/Scripts/: deferred-bindings-e2e-tests.sh  deferred-bindings-tests.sh  e2e-tests.sh  fwpc-e2e-tests.sh  fwpc-tests.sh  install-deps.sh
.github/linters/: pyproject.toml  tox.ini
.github/policies/: resourceManagement.yml
.github/workflows/: ci_consumption_workflow.yml  ci_deferred_bindings_workflow.yml  ci_docker_con_workflow.yml  ci_docker_custom_workflow.yml  ci_docker_ded_workflow.yml  ci_e2e_workflow.yml  ci_e2e_workflow_dev.yml  ci_e2e_workflow_v3.yml  ci_ut_workflow.yml  ci_worker_build_workflow.yml  codeql-analysis.yml  e2e_ci_workflow.yml  linter.yml  ogf_workflow.yml  perf-testing-setup.yml  pr_title_enforcer.yml  profiling.yml  pyproject.toml  python-39-unittesting.yml  python-unittesting.yml  unittesting.yml  ut_ci_workflow.yml  ut_ci_workflow_dev.yml
Samples/: host.json
Samples/HttpTrigger1/: README.md  function.json  main.py
Samples/HttpTrigger2/: function.json  main.py  test.py
Samples/QueueTrigger1/: README.md  function.json  main.py  test.py
Samples/TimerTrigger/: README.md  function.json  main.py  test.py
azure/: __init__.py
azure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
azure/functions/: __init__.py  _abc.py  _cosmosdb.py  _http.py  _queue.py  abc.py
azure/functions_worker/: __init__.py  constants.py  dispatcher.py  dist.py  functions.py  loader.py  logging.py  main.py  testutils.py  tracing.py  typing_inspect.py
azure/worker/: __init__.py  aio_compat.py  bind.py  dispatcher.py  functions.py  loader.py  rpc_types.py  testutils.py  type_converters.py  type_impl.py  type_meta.py  types.py
azure_functions_worker/: Dockerfile  __init__.py  __main__.py  constants.py  dispatcher.py  exceptions.py  extension.py  extensions.py  functions.py  http_proxy.py  http_v2.py  loader.py  logging.py  main.py  testutils.py  testutils_lc.py  tracing.py  version.py
azure_functions_worker/_thirdparty/: aio_compat.py  typing_inspect.py
azure_functions_worker/bindings/: __init__.py  context.py  datumdef.py  generic.py  implicit_out.py  meta.py  nullable_converters.py  out.py  retrycontext.py  rpcexception.py  shared_memory_manager.py  shared_memory_metadata.py  tracecontext.py
azure_functions_worker/mmap_handler/: __init__.py  file_accessor.py  file_accessor_factory.py  file_accessor_linux.py  file_accessor_unix.py  file_accessor_windows.py  file_reader.py  file_writer.py  memorymappedfile_constants.py  memorymappedfile_controlflags.py  shared_memory_constants.py  shared_memory_map.py
azure_functions_worker/protos/: FunctionRpc_pb2.py  FunctionRpc_pb2_grpc.py  __init__.py
azure_functions_worker/shared_memory_data_transfer/: __init__.py  file_accessor.py  file_accessor_factory.py  file_accessor_unix.py  file_accessor_windows.py  shared_memory_constants.py  shared_memory_manager.py  shared_memory_map.py  shared_memory_metadata.py
azure_functions_worker/utils/: __init__.py  app_setting_manager.py  app_settings_logs.py  common.py  config_manager.py  tracing.py  (+3 more)
azureworker/: __init__.py  types.py
docs/: CODE_OF_CONDUCT.md  Makefile  api.rst  conf.py  index.rst  make.bat  pystein-getting-started.md
pack/: Microsoft.Azure.Functions.PythonWorker.nuspec  Microsoft.Azure.Functions.PythonWorker.targets  Microsoft.Azure.Functions.PythonWorkerRunEnvironments.nuspec  Microsoft.Azure.Functions.PythonWorkerRunEnvironments.targets  Microsoft.Azure.Functions.V2.PythonWorker.nuspec  Microsoft.Azure.Functions.V3.PythonWorker.nuspec  Microsoft.Azure.Functions.V3.PythonWorker.targets  Microsoft.Azure.Functions.V4.PythonWorker.nuspec  worker.nuspec
pp-docs/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
python/: run_worker.py  start.sh  worker.config.json  worker.py
tests/: .gitignore  __init__.py  tasks.py  test_blob_functions.py  test_broken_functions.py  test_code_quality.py  test_cosmosdb_functions.py  test_custombinding_functions.py  test_eventgrid_functions.py  test_eventhub_functions.py  test_http_functions.py  test_loader.py  test_mock_generic_functions.py  test_mock_http_functions.py  test_mock_timer_functions.py  test_queue_functions.py  test_random.py  test_rpc_messages.py  test_servicebus_functions.py  test_setup.py  test_table_functions.py  test_types.py  test_typing_inspect.py
(+943 files in other folders)
