[project]
name = "azure-functions-worker"
version = "4.29.0"
description = "Python Language Worker for Azure Functions Runtime"
authors = [
    { name = "Azure Functions team at Microsoft Corp.", email = "azurefunctions@microsoft.com" }
]
keywords = ["azure", "functions", "azurefunctions",
            "python", "serverless"]
license = { name = "MIT", file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers"
]

dependencies = [
    "azure-functions==1.20.0",
    "python-dateutil~=2.9.0"
]

# Python version-specific dependencies
[project.optional-dependencies]
python37 = [
    "protobuf~=3.19.3",
    "grpcio-tools~=1.43.0",
    "grpcio~=1.43.0"
]
python38_plus = [
    "protobuf~=4.22.0",
    "grpcio-tools~=1.54.2",
    "grpcio~=1.54.2",
    "azurefunctions-extensions-base"
]
dev = [
    "azure-eventhub",
    "azure-functions-durable",
    "flask",
    "fastapi~=0.111.0",
    "pydantic",
    "pycryptodome==3.*",
    "flake8==7.*",
    "mypy",
    "pytest==8.*",
    "requests==2.*",
    "coverage",
    "pytest-sugar",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
    "pytest-instafail",
    "pytest-rerunfailures",
    "ptvsd",
    "python-dotenv",
    "plotly",
    "scikit-learn",
    "opencv-python",
    "pandas",
    "numpy",
    "pre-commit"
]
test-http-v2 = [
    "azurefunctions-extensions-http-fastapi",
    "ujson",
    "orjson"
]
test-deferred-bindings = [
    "azurefunctions-extensions-bindings-blob"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "azure_functions_worker"}

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["azure_functions_worker"]
default_section = "THIRDPARTY"
src_paths = ["azure_functions_worker"]
skip_glob = [
    "build",
    "dist",
    "env",
    "venv",
    "*venv*",
    "*.egg-info",
    ".tox",
    ".nox",
    ".git",
    "__pycache__",
    ".ci",
    ".devcontainer",
    ".github",
#    "eng",
#    "pack",
    "*protos/*"
]